tests/diag/type-arith-string.wisp
const label = "cpu" + 3;
